@@ -5,23 +5,26 @@
 # to extra directories that are included when cleaning and tarring.
 
 
-all : MAKE_GOALS=$(MAKE_TOOLS) $(MAKE_LIBS) $(MAKE_APPS)
+all : MAKE_GOALS=$(MAKE_TOOLS) $(MAKE_LIBS) $(MAKE_APPS) $(MAKE_DEMOS)
 all : make-all
 
-inplace : MAKE_GOALS=$(MAKE_TOOLS) $(MAKE_LIBS)
+inplace : MAKE_GOALS=$(MAKE_TOOLS) $(MAKE_LIBS) $(MAKE_APPS)
 inplace : make-inplace
 
-noinplace : MAKE_GOALS=$(MAKE_TOOLS) $(MAKE_LIBS)
+noinplace : MAKE_GOALS=$(MAKE_TOOLS) $(MAKE_LIBS) $(MAKE_APPS)
 noinplace : make-noinplace
 
-tarsource : MAKE_GOALS=$(MAKE_TOOLS) $(MAKE_LIBS) $(MAKE_APPS) $(MAKE_VERB)
+tarsource : MAKE_GOALS=$(MAKE_TOOLS) $(MAKE_LIBS) $(MAKE_APPS) $(MAKE_DEMOS) \
+	$(MAKE_VERB)
 tarsource : make-tarsource
 
-clean : MAKE_GOALS=$(MAKE_TOOLS) $(MAKE_LIBS) $(MAKE_APPS) $(MAKE_VERB)
+clean : MAKE_GOALS=$(MAKE_TOOLS) $(MAKE_LIBS) $(MAKE_APPS) $(MAKE_DEMOS) \
+	$(MAKE_VERB)
 clean : make-clean
 	$(RM) $(EXTRA_CLEANFILES)
 
-distclean : MAKE_GOALS=$(MAKE_TOOLS) $(MAKE_LIBS) $(MAKE_APPS) $(MAKE_VERB)
+distclean : MAKE_GOALS=$(MAKE_TOOLS) $(MAKE_LIBS) $(MAKE_APPS) $(MAKE_DEMOS) \
+	$(MAKE_VERB)
 distclean : make-distclean
 	$(RM) $(LOCALPKGCONF) $(LOCALPKGCONF).old $(EXTRA_DISTCLEANFILES)
 
